@@ -1,35 +1,37 @@
 package moment.moment.application;
 
-import lombok.RequiredArgsConstructor;
-import moment.comment.domain.Comment;
-import moment.comment.infrastructure.CommentRepository;
-import moment.global.exception.ErrorCode;
-import moment.global.exception.MomentException;
-import moment.matching.application.MatchingService;
-import moment.moment.domain.Moment;
-import moment.moment.domain.MomentCreatePolicy;
-import moment.moment.dto.request.MomentCreateRequest;
-import moment.moment.dto.response.MatchedMomentResponse;
-import moment.moment.dto.response.MomentCreateResponse;
-import moment.moment.dto.response.MomentCreationStatusResponse;
-import moment.moment.dto.response.MyMomentPageResponse;
-import moment.moment.dto.response.MyMomentResponse;
-import moment.moment.infrastructure.MomentRepository;
-import moment.reply.domain.Emoji;
-import moment.reply.infrastructure.EmojiRepository;
-import moment.user.application.UserQueryService;
-import moment.user.domain.User;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.Random;
 import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import moment.comment.domain.Comment;
+import moment.comment.infrastructure.CommentRepository;
+import moment.global.exception.ErrorCode;
+import moment.global.exception.MomentException;
+import moment.moment.domain.BasicMomentCreatePolicy;
+import moment.moment.domain.ExtraMomentCreatePolicy;
+import moment.moment.domain.Moment;
+import moment.moment.domain.WriteType;
+import moment.moment.dto.request.MomentCreateRequest;
+import moment.moment.dto.response.CommentableMomentResponse;
+import moment.moment.dto.response.MomentCreateResponse;
+import moment.moment.dto.response.MomentCreationStatusResponse;
+import moment.moment.dto.response.MyMomentPageResponse;
+import moment.moment.dto.response.MyMomentResponse;
+import moment.moment.infrastructure.MomentRepository;
+import moment.reply.domain.Echo;
+import moment.reply.infrastructure.EchoRepository;
+import moment.reward.application.RewardService;
+import moment.reward.domain.Reason;
+import moment.user.application.UserQueryService;
+import moment.user.domain.User;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
@@ -42,26 +44,42 @@ public class MomentService {
 
     private final MomentRepository momentRepository;
     private final CommentRepository commentRepository;
-    private final EmojiRepository emojiRepository;
-
+    private final EchoRepository echoRepository;
     private final UserQueryService userQueryService;
-    private final MatchingService matchingService;
-    private final MomentQueryService momentQueryService;
+    private final RewardService rewardService;
 
-    private final MomentCreatePolicy momentCreatePolicy;
+    private final BasicMomentCreatePolicy basicMomentCreatePolicy;
+    private final ExtraMomentCreatePolicy extraMomentCreatePolicy;
+
 
     @Transactional
-    public MomentCreateResponse addMomentAndMatch(MomentCreateRequest request, Long momenterId) {
+    public MomentCreateResponse addBasicMoment(MomentCreateRequest request, Long momenterId) {
         User momenter = userQueryService.getUserById(momenterId);
 
-        if (!momentCreatePolicy.canCreate(momenter)) {
+        if (!basicMomentCreatePolicy.canCreate(momenter)) {
             throw new MomentException(ErrorCode.MOMENT_ALREADY_EXIST);
         }
 
-        Moment momentWithoutId = new Moment(request.content(), momenter);
+        Moment momentWithoutId = new Moment(request.content(), momenter, WriteType.BASIC);
         Moment savedMoment = momentRepository.save(momentWithoutId);
 
-        matchingService.match(savedMoment.getId());
+        rewardService.rewardForMoment(momenter, Reason.MOMENT_CREATION, savedMoment.getId());
+
+        return MomentCreateResponse.of(savedMoment);
+    }
+
+    @Transactional
+    public MomentCreateResponse addExtraMoment(MomentCreateRequest request, Long momenterId) {
+        User momenter = userQueryService.getUserById(momenterId);
+
+        if (!extraMomentCreatePolicy.canCreate(momenter)) {
+            throw new MomentException(ErrorCode.USER_NOT_ENOUGH_STAR);
+        }
+
+        Moment momentWithoutId = new Moment(request.content(), momenter, WriteType.EXTRA);
+        Moment savedMoment = momentRepository.save(momentWithoutId);
+
+        rewardService.useReward(momenter, Reason.MOMENT_ADDITIONAL_USE, savedMoment.getId());
 
         return MomentCreateResponse.of(savedMoment);
     }
@@ -98,23 +116,27 @@ public class MomentService {
 
         if (comments.isEmpty()) {
             List<MyMomentResponse> responses = moments.stream()
-                    .map(moment -> MyMomentResponse.of(moment, null, Collections.emptyList()))
+                    .map(moment -> MyMomentResponse.of(moment, Collections.emptyList(), Collections.emptyMap()))
                     .toList();
 
             return MyMomentPageResponse.of(responses, nextCursor, hasNextPage, responses.size());
         }
 
-        Map<Moment, Comment> commentByMoment = comments.stream()
-                .collect(Collectors.toMap(Comment::getMoment, comment -> comment));
+        Map<Moment, List<Comment>> commentsByMoment = comments.stream()
+                .collect(Collectors.groupingBy(Comment::getMoment));
 
-        Map<Comment, List<Emoji>> emojisByComment = emojiRepository.findAllByCommentIn(comments).stream()
-                .collect(Collectors.groupingBy(Emoji::getComment));
+        Map<Comment, List<Echo>> echosByComment = echoRepository.findAllByCommentIn(comments).stream()
+                .collect(Collectors.groupingBy(Echo::getComment));
 
         List<MyMomentResponse> responses = moments.stream()
                 .map(moment -> {
-                    Comment comment = commentByMoment.get(moment);
-                    List<Emoji> relatedEmojis = emojisByComment.getOrDefault(comment, Collections.emptyList());
-                    return MyMomentResponse.of(moment, comment, relatedEmojis);
+                    List<Comment> momentComments = commentsByMoment.getOrDefault(moment, List.of());
+
+                    Map<Long, List<Echo>> commentEchos = momentComments.stream()
+                            .collect(Collectors.toMap(Comment::getId,
+                                    comment -> echosByComment.getOrDefault(comment, List.of())));
+
+                    return MyMomentResponse.of(moment, momentComments, commentEchos);
                 })
                 .toList();
 
@@ -141,22 +163,38 @@ public class MomentService {
         return nextCursor;
     }
 
-
-    public MatchedMomentResponse getMatchedMoment(Long commenterId) {
-        User commenter = userQueryService.getUserById(commenterId);
-
-        Optional<Moment> matchedMoment = momentQueryService.findTodayMatchedMomentByCommenter(commenter);
-
-        return matchedMoment.map(MatchedMomentResponse::from).orElseGet(MatchedMomentResponse::createEmpty);
-    }
-
     public MomentCreationStatusResponse canCreateMoment(Long id) {
         User user = userQueryService.getUserById(id);
 
-        if (momentCreatePolicy.canCreate(user)) {
+        if (basicMomentCreatePolicy.canCreate(user)) {
             return MomentCreationStatusResponse.createAllowedStatus();
         }
 
         return MomentCreationStatusResponse.createDeniedStatus();
+    }
+
+    public MomentCreationStatusResponse canCreateExtraMoment(Long id) {
+        User user = userQueryService.getUserById(id);
+
+        if (extraMomentCreatePolicy.canCreate(user)) {
+            return MomentCreationStatusResponse.createAllowedStatus();
+        }
+
+        return MomentCreationStatusResponse.createDeniedStatus();
+    }
+
+    public CommentableMomentResponse getCommentableMoment(Long id) {
+        User user = userQueryService.getUserById(id);
+
+        LocalDateTime threeDaysAgo = LocalDateTime.now().minusDays(3);
+        List<Moment> commentableMoments = momentRepository.findCommentableMoments(user, threeDaysAgo);
+
+        if (commentableMoments.isEmpty()) {
+            return CommentableMomentResponse.empty();
+        }
+
+        Moment moment = commentableMoments.get(new Random().nextInt(commentableMoments.size()));
+
+        return CommentableMomentResponse.from(moment);
     }
 }
